Fixed header images not loading in browser issue and added more styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header">
         <div class="nav-bar">
-            <img src="/images/logo.png" alt="logo" height="160" width="160">
+            <img src="images/logo.png" alt="logo" height="160" width="160">
             <a href="#">Sign In</a>
             <a href="#">My Account</a>
             <a href="#">Wishlist</a>
@@ -22,30 +22,31 @@
         </div>
 
         <div class="header-showcase">
-            <img src="/images/scene.png" alt="landscape scene" height="auto" width="500">
+            <img src="images/scene.png" alt="landscape scene" height="auto" width="500">
         </div>
     </div>
 
     <div class="main-content">
         <div class="main-content-title">
-            <h3>Some random information</h3>
+            <h3>Popular Travel Destinations</h3>
         </div>
-
-        <div class="content-images">
-            <img src="images/travel1.png" alt="travel photo destination 1">
-            <p>Visit beautiful Napoli</p>
-        </div>
-        <div class="content-images">
-            <img src="images/travel2.png" alt="travel photo destination 2">
-            <p>Visit beautiful Istanbul</p>
-        </div>
-        <div class="content-images">
-            <img src="images/travel3.png" alt="travel photo destination 3">
-            <p>Visit beautiful Prague</p>
-        </div>
-        <div class="content-images">
-            <img src="images/travel4.png" alt="travel photo destination 4">
-            <p>Visit beautiful London</p>
+        <div class="main-content-images">
+            <div class="content-images">
+                <img src="images/travel1.png" alt="travel photo destination 1">
+                <p class="image-title">Visit beautiful Napoli</p>
+            </div>
+            <div class="content-images">
+                <img src="images/travel2.png" alt="travel photo destination 2">
+                <p class="image-title">Visit beautiful Istanbul</p>
+            </div>
+            <div class="content-images">
+                <img src="images/travel3.png" alt="travel photo destination 3">
+                <p class="image-title">Visit beautiful Prague</p>
+            </div>
+            <div class="content-images">
+                <img src="images/travel4.png" alt="travel photo destination 4">
+                <p class="image-title">Visit beautiful London</p>
+            </div>
         </div>
     </div>
 
