Adjusting styling for footer, quote, and cta

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         </div>
 
         <div class="header-main-content">
-            <h2 class="hero-main">This website is awesome</h2>
-            <p class="hero-secondary">This website has some subtext that goes here under the main title.  It is a smaller font and the color is lower contrast</p>
+            <h2 class="hero-main">Sunset Travels Travel Agency</h2>
+            <p class="hero-secondary">We aim to put a sunset on all your work blues.  Come find out how to travel with Sunset Travels</p>
             <button class="button" onclick="window.location.href='#';">Sign Up</button>
         </div>
 
@@ -52,15 +52,18 @@
 
     <div class="testimonial">
         <blockquote>
-            <p><i>This is my quote, there are many like it, but this one is mine</i></p>
+            <p><i>My trip to Monaco was life changing. Entirely booked and planned by Sunset Travels, I can't thank them enough for a once in a lifetime oppurtunity</i></p>
             <cite><strong>-Brandon Spaid</strong></cite>
         </blockquote>
     </div>
 
     <div class="call-to-action">
-        <h2 class="cta-title">Call to Action! It's time!</h2>
-        <p class="cta-text">Sign up for our product by clicking the button right over there</p>
-        <button class="cta-button" onclick="window.location.href='#';">Sign up</button>
+        <div class="cta-text">
+            <p><strong>It's time to make your own memories!</strong></br>Sign up for an account today and start your journey to the sunsets</p>
+        </div>
+        <div class="cta-button-flex">
+            <button class="cta-button" onclick="window.location.href='#';">Sign up</button>
+        </div>
     </div>
 
     <div class="footer">
