--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
     <div class="header">
         <div class="nav-bar">
             <img src="images/logo.png" alt="logo" height="160" width="160">
-            <a href="#">Sign In</a>
-            <a href="#">My Account</a>
-            <a href="#">Wishlist</a>
+            <div class="nav-links">
+                <a href="#">Sign In</a>
+                <a href="#">My Account</a>
+                <a href="#">Wishlist</a>
+            </div>
         </div>
-
-        <div class="header-main-content">
-            <h2 class="hero-main">Sunset Travels Travel Agency</h2>
-            <p class="hero-secondary">We aim to put a sunset on all your work blues.  Come find out how to travel with Sunset Travels</p>
-            <button class="button" onclick="window.location.href='#';">Sign Up</button>
-        </div>
-
-        <div class="header-showcase">
-            <img src="images/scene.png" alt="landscape scene" height="auto" width="500">
+        <div class="header-content">
+            <div class="header-main-content">
+                <h2 class="hero-main">Sunset Travels Travel Agency</h2>
+                <p class="hero-secondary">We aim to put a sunset on all your work blues.  Come find out how to travel with Sunset Travels</p>
+                <button class="button" onclick="window.location.href='#';">Sign Up</button>
+            </div>
+            <div class="header-showcase">
+                <img src="images/scene.png" alt="landscape scene" height="300" width="400">
+            </div>
         </div>
     </div>
 
